# hello-algo

./: .editorconfig  .gitattributes  .gitignore  .prettierignore  .prettierrc  404.html  Dockerfile  Dockerfile-dev  FAQ-en.md  FAQ.md  Makefile  README-en.md  README.md  a.txt  clean_md_files.py  deploy.sh  docker-compose-dev.yml  docker-compose.yml  giscus.json  index.html  index.md  mkdocs-en.yml  mkdocs.yml  requirements.txt  search.json  sitemap.xml  test1204  vercel.json
codes/c/: .gitignore  CMakeLists.txt  Makefile  build.zig
codes/c/chapter_array_and_linkedlist/: CMakeLists.txt  array.c  linked_list.c  list.c  my_list.c
codes/c/chapter_backtracking/: CMakeLists.txt  n_queens.c  permutations_i.c  permutations_ii.c  preorder_traversal_i_compact.c  preorder_traversal_ii_compact.c  preorder_traversal_iii_compact.c  preorder_traversal_iii_template.c  subset_sum_i.c  subset_sum_i_naive.c  subset_sum_ii.c
codes/c/chapter_binary_search/: CMakeLists.txt  binary_search.c
codes/c/chapter_computational_complexity/: CMakeLists.txt  iteration.c  leetcode_two_sum.c  recursion.c  space_complexity.c  time_complexity.c  worst_best_time_complexity.c
codes/c/chapter_divide_and_conquer/: CMakeLists.txt  binary_search_recur.c  build_tree.c  hanota.c
codes/c/chapter_dynamic_programming/: CMakeLists.txt  climbing_stairs_backtrack.c  climbing_stairs_constraint_dp.c  climbing_stairs_dfs.c  climbing_stairs_dfs_mem.c  climbing_stairs_dp.c  coin_change.c  coin_change_ii.c  edit_distance.c  knapsack.c  min_cost_climbing_stairs_dp.c  min_path_sum.c  unbounded_knapsack.c
codes/c/chapter_graph/: CMakeLists.txt  graph_adjacency_list.c  graph_adjacency_list_test.c  graph_adjacency_matrix.c  graph_bfs  graph_bfs.c  graph_dfs.c
codes/c/chapter_greedy/: CMakeLists.txt  coin_change_greedy.c  dijkstra.c  fractional_knapsack.c  max_capacity.c  max_product_cutting.c
codes/c/chapter_hashing/: CMakeLists.txt  array_hash.c  array_hash_map.c  hash_map.c  hash_map_chaining.c  hash_map_open_addressing.c  simple_hash.c
codes/c/chapter_hashtable/: CMakeLists.txt
codes/c/chapter_heap/: CMakeLists.txt  my_heap.c  my_heap_test.c  top_k.c
codes/c/chapter_searching/: CMakeLists.txt  binary_search.c  binary_search_edge.c  binary_search_insertion.c  hashing_search.c  leetcode_two_sum.c  linear_search.c  two_sum.c
codes/c/chapter_sorting/: CMakeLists.txt  bubble_sort.c  bucket_sort.c  counting_sort.c  head_sort.c  heap_sort.c  insertion_sort.c  merge_sort.c  quick_sort.c  radix_sort.c  selection_sort.c
codes/c/chapter_stack_and_queue/: CMakeLists.txt  array_deque.c  array_queue.c  array_stack.c  linkedlist_deque.c  linkedlist_queue.c  linkedlist_stack.c
codes/c/chapter_tree/: CMakeLists.txt  array_binary_tree.c  avl_tree.c  binary_search_tree.c  binary_tree.c  binary_tree_bfs.c  binary_tree_dfs.c
codes/c/include/: CMakeLists.txt  PrintUtil.h  array_hash_map.h  include.h  include_test.c  list_node.h  macro_fun.h  print_util.h  tree_node.h
codes/c/utils/: common.h  common_test.c  greedy.h  list_node.h  print_util.h  tree_node.h  vector.h  vertex.h
codes/cpp/: .gitignore  CMakeLists.txt
codes/cpp/chapter_array_and_linkedlist/: CMakeLists.txt  array.cpp  linked_list.cpp  list.cpp  my_list.cpp
codes/cpp/chapter_backtracking/: CMakeLists.txt  backtrack_find_constrained_paths.cpp  n_queens.cpp  permutations_i.cpp  permutations_ii.cpp  preorder_find_constrained_paths.cpp  preorder_find_nodes.cpp  preorder_find_paths.cpp  preorder_traversal_i_compact.cpp  preorder_traversal_ii_compact.cpp  preorder_traversal_iii_compact.cpp  preorder_traversal_iii_template.cpp  subset_sum_i.cpp  subset_sum_i_naive.cpp  subset_sum_ii.cpp
codes/cpp/chapter_binary_search/: CMakeLists.txt  binary_search.cpp
codes/cpp/chapter_computational_complexity/: CMakeLists.txt  iteration.cpp  leetcode_two_sum.cpp  recursion.cpp  space_complexity.cpp  space_complexity_types.cpp  time_complexity.cpp  time_complexity_types.cpp  worst_best_time_complexity.cpp
codes/cpp/chapter_divide_and_conquer/: binary_search_recur.cpp  build_tree.cpp  hanota.cpp
codes/cpp/chapter_dynamic_programming/: CMakeLists.txt  climbing_stairs_backtrack.cpp  climbing_stairs_constraint_dp.cpp  climbing_stairs_dfs.cpp  climbing_stairs_dfs_mem.cpp  climbing_stairs_dp.cpp  coin_change.cpp  coin_change_ii.cpp  edit_distance.cpp  knapsack.cpp  min_cost_climbing_stairs_dp.cpp  min_path_sum.cpp  multiple_knapsack.cpp  unbounded_knapsack.cpp  unique_ways.cpp
codes/cpp/chapter_graph/: CMakeLists.txt  graph_adjacency_list.cpp  graph_adjacency_list_test.cpp  graph_adjacency_matrix.cpp  graph_bfs.cpp  graph_dfs.cpp
codes/cpp/chapter_greedy/: CMakeLists.txt  Dijkstra.cpp  coin_change_greedy.cpp  fractional_knapsack.cpp  max_capacity.cpp  max_product_cutting.cpp
codes/cpp/chapter_hashing/: CMakeLists.txt  array_hash_map.cpp  array_hash_map_test.cpp  built_in_hash.cpp  hash_map.cpp  hash_map_chaining.cpp  hash_map_open_addressing.cpp  simple_hash.cpp
codes/cpp/chapter_heap/: CMakeLists.txt  heap.cpp  my_heap.cpp  top_k.cpp
codes/cpp/chapter_searching/: CMakeLists.txt  binary_search.cpp  binary_search_edge.cpp  binary_search_insertion.cpp  hashing_search.cpp  leetcode_two_sum.cpp  linear_search.cpp  two_sum.cpp
codes/cpp/chapter_sorting/: CMakeLists.txt  bubble_sort.cpp  bucket_sort.cpp  counting_sort.cpp  heap_sort.cpp  insertion_sort.cpp  merge_sort.cpp  quick_sort.cpp  radix_sort.cpp  selection_sort.cpp
codes/cpp/chapter_stack_and_queue/: CMakeLists.txt  array_deque.cpp  array_queue.cpp  array_stack.cpp  deque.cpp  linkedlist_deque.cpp  linkedlist_queue.cpp  linkedlist_stack.cpp  queue.cpp  stack.cpp
codes/cpp/chapter_tree/: CMakeLists.txt  array_binary_tree.cpp  avl_tree.cpp  binary_search_tree.cpp  binary_tree.cpp  binary_tree_bfs.cpp  binary_tree_dfs.cpp
codes/cpp/include/: CMakeLists.txt  ListNode.hpp  PrintUtil.hpp  TreeNode.hpp  Vertex.hpp  include.hpp
codes/cpp/utils/: common.hpp  list_node.hpp  print_utils.hpp  tree_node.hpp  vertex.hpp
codes/rust/: .gitignore  Cargo.toml  GUIDELINES.md  array_queue.rs
codes/rust/chapter_heap/: heap.rs  (+2 more)
(+9184 files in other folders)
