[package]
name = "chapter_computational_complexity"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "leetcode_two_sum"
path = "leetcode_two_sum.rs"

[[bin]]
name = "time_complexity"
path = "time_complexity.rs"

[[bin]]
name = "worst_best_time_complexity"
path = "worst_best_time_complexity.rs"


[dependencies]
rand = "0.8.5"
