add_executable(climbing_stairs_backtrack climbing_stairs_backtrack.cpp)
add_executable(climbing_stairs_dfs climbing_stairs_dfs.cpp)
add_executable(climbing_stairs_dfs_mem climbing_stairs_dfs_mem.cpp)
add_executable(climbing_stairs_dp climbing_stairs_dp.cpp)
add_executable(min_cost_climbing_stairs_dp min_cost_climbing_stairs_dp.cpp)
add_executable(min_path_sum min_path_sum.cpp)
add_executable(unbounded_knapsack unbounded_knapsack.cpp)
add_executable(coin_change coin_change.cpp)
add_executable(coin_change_ii coin_change_ii.cpp)
add_executable(edit_distance edit_distance.cpp)